external-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: blue
spec:
  type: ExternalName
  externalName: keycloak.keycloak.svc.cluster.local
  ports:
    - port: 8080
      targetPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: blue
spec:
  type: ExternalName
  externalName: loki-stack-grafana.monitoring.svc.cluster.local
  ports:
    - port: 80
      targetPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: argocd-server
  namespace: blue
spec:
  type: ExternalName
  externalName: argocd-server.argocd.svc.cluster.local
  ports:
    - name: http
      port: 80
      protocol: TCP
    - name: https
      port: 443
      protocol: TCP
